--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
 	├── <a href="./users_Belarus_2021_05_30-22_39_49.csv">users_Belarus_2021_05_30-22_39_49.csv</a><br>
 	├── <a href="./users_Belarus_2021_05_31-22_52_00.csv">users_Belarus_2021_05_31-22_52_00.csv</a><br>
 	├── <a href="./users_Belarus_2021_06_01-22_59_18.csv">users_Belarus_2021_06_01-22_59_18.csv</a><br>
+	├── <a href="./users_Belarus_2021_06_02-22_55_49.csv">users_Belarus_2021_06_02-22_55_49.csv</a><br>
 	├── <a href="./users_Ukraine_2021_02_08-11_13_31.csv">users_Ukraine_2021_02_08-11_13_31.csv</a><br>
 	├── <a href="./users_Ukraine_2021_02_08-22_18_07.csv">users_Ukraine_2021_02_08-22_18_07.csv</a><br>
 	├── <a href="./users_Ukraine_2021_02_09-22_21_30.csv">users_Ukraine_2021_02_09-22_21_30.csv</a><br>
@@ -261,6 +262,7 @@
 	├── <a href="./users_Ukraine_2021_05_30-22_39_48.csv">users_Ukraine_2021_05_30-22_39_48.csv</a><br>
 	├── <a href="./users_Ukraine_2021_05_31-22_51_59.csv">users_Ukraine_2021_05_31-22_51_59.csv</a><br>
 	├── <a href="./users_Ukraine_2021_06_01-22_59_17.csv">users_Ukraine_2021_06_01-22_59_17.csv</a><br>
+	├── <a href="./users_Ukraine_2021_06_02-22_55_48.csv">users_Ukraine_2021_06_02-22_55_48.csv</a><br>
 	├── <a href="./users_World_2021_02_08-11_13_29.csv">users_World_2021_02_08-11_13_29.csv</a><br>
 	├── <a href="./users_World_2021_02_08-22_18_05.csv">users_World_2021_02_08-22_18_05.csv</a><br>
 	├── <a href="./users_World_2021_02_09-22_21_27.csv">users_World_2021_02_09-22_21_27.csv</a><br>
@@ -375,12 +377,13 @@
 	├── <a href="./users_World_2021_05_29-22_37_45.csv">users_World_2021_05_29-22_37_45.csv</a><br>
 	├── <a href="./users_World_2021_05_30-22_39_45.csv">users_World_2021_05_30-22_39_45.csv</a><br>
 	├── <a href="./users_World_2021_05_31-22_51_57.csv">users_World_2021_05_31-22_51_57.csv</a><br>
-	└── <a href="./users_World_2021_06_01-22_59_15.csv">users_World_2021_06_01-22_59_15.csv</a><br>
+	├── <a href="./users_World_2021_06_01-22_59_15.csv">users_World_2021_06_01-22_59_15.csv</a><br>
+	└── <a href="./users_World_2021_06_02-22_55_46.csv">users_World_2021_06_02-22_55_46.csv</a><br>
 	<br><br>
 	</p>
 	<p>
 
-2 directories, 345 files
+2 directories, 348 files
 	<br><br>
 	</p>
 	<hr>
