Brandmaister digital contacts on 2021-06-08-222250

--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
 	├── <a href="./users_Belarus_2021_06_05-22_34_12.csv">users_Belarus_2021_06_05-22_34_12.csv</a><br>
 	├── <a href="./users_Belarus_2021_06_06-22_32_49.csv">users_Belarus_2021_06_06-22_32_49.csv</a><br>
 	├── <a href="./users_Belarus_2021_06_07-22_49_30.csv">users_Belarus_2021_06_07-22_49_30.csv</a><br>
+	├── <a href="./users_Belarus_2021_06_08-22_22_49.csv">users_Belarus_2021_06_08-22_22_49.csv</a><br>
 	├── <a href="./users_Ukraine_2021_02_08-11_13_31.csv">users_Ukraine_2021_02_08-11_13_31.csv</a><br>
 	├── <a href="./users_Ukraine_2021_02_08-22_18_07.csv">users_Ukraine_2021_02_08-22_18_07.csv</a><br>
 	├── <a href="./users_Ukraine_2021_02_09-22_21_30.csv">users_Ukraine_2021_02_09-22_21_30.csv</a><br>
@@ -273,6 +274,7 @@
 	├── <a href="./users_Ukraine_2021_06_05-22_34_11.csv">users_Ukraine_2021_06_05-22_34_11.csv</a><br>
 	├── <a href="./users_Ukraine_2021_06_06-22_32_49.csv">users_Ukraine_2021_06_06-22_32_49.csv</a><br>
 	├── <a href="./users_Ukraine_2021_06_07-22_49_29.csv">users_Ukraine_2021_06_07-22_49_29.csv</a><br>
+	├── <a href="./users_Ukraine_2021_06_08-22_22_48.csv">users_Ukraine_2021_06_08-22_22_48.csv</a><br>
 	├── <a href="./users_World_2021_02_08-11_13_29.csv">users_World_2021_02_08-11_13_29.csv</a><br>
 	├── <a href="./users_World_2021_02_08-22_18_05.csv">users_World_2021_02_08-22_18_05.csv</a><br>
 	├── <a href="./users_World_2021_02_09-22_21_27.csv">users_World_2021_02_09-22_21_27.csv</a><br>
@@ -393,12 +395,13 @@
 	├── <a href="./users_World_2021_06_04-22_47_53.csv">users_World_2021_06_04-22_47_53.csv</a><br>
 	├── <a href="./users_World_2021_06_05-22_34_08.csv">users_World_2021_06_05-22_34_08.csv</a><br>
 	├── <a href="./users_World_2021_06_06-22_32_46.csv">users_World_2021_06_06-22_32_46.csv</a><br>
-	└── <a href="./users_World_2021_06_07-22_49_27.csv">users_World_2021_06_07-22_49_27.csv</a><br>
+	├── <a href="./users_World_2021_06_07-22_49_27.csv">users_World_2021_06_07-22_49_27.csv</a><br>
+	└── <a href="./users_World_2021_06_08-22_22_46.csv">users_World_2021_06_08-22_22_46.csv</a><br>
 	<br><br>
 	</p>
 	<p>
 
-2 directories, 363 files
+2 directories, 366 files
 	<br><br>
 	</p>
 	<hr>
