Brandmaister digital contacts on 2021-06-10-221958

--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
 	├── <a href="./users_Belarus_2021_06_07-22_49_30.csv">users_Belarus_2021_06_07-22_49_30.csv</a><br>
 	├── <a href="./users_Belarus_2021_06_08-22_22_49.csv">users_Belarus_2021_06_08-22_22_49.csv</a><br>
 	├── <a href="./users_Belarus_2021_06_09-22_22_52.csv">users_Belarus_2021_06_09-22_22_52.csv</a><br>
+	├── <a href="./users_Belarus_2021_06_10-22_19_57.csv">users_Belarus_2021_06_10-22_19_57.csv</a><br>
 	├── <a href="./users_Ukraine_2021_02_08-11_13_31.csv">users_Ukraine_2021_02_08-11_13_31.csv</a><br>
 	├── <a href="./users_Ukraine_2021_02_08-22_18_07.csv">users_Ukraine_2021_02_08-22_18_07.csv</a><br>
 	├── <a href="./users_Ukraine_2021_02_09-22_21_30.csv">users_Ukraine_2021_02_09-22_21_30.csv</a><br>
@@ -277,6 +278,7 @@
 	├── <a href="./users_Ukraine_2021_06_07-22_49_29.csv">users_Ukraine_2021_06_07-22_49_29.csv</a><br>
 	├── <a href="./users_Ukraine_2021_06_08-22_22_48.csv">users_Ukraine_2021_06_08-22_22_48.csv</a><br>
 	├── <a href="./users_Ukraine_2021_06_09-22_22_51.csv">users_Ukraine_2021_06_09-22_22_51.csv</a><br>
+	├── <a href="./users_Ukraine_2021_06_10-22_19_56.csv">users_Ukraine_2021_06_10-22_19_56.csv</a><br>
 	├── <a href="./users_World_2021_02_08-11_13_29.csv">users_World_2021_02_08-11_13_29.csv</a><br>
 	├── <a href="./users_World_2021_02_08-22_18_05.csv">users_World_2021_02_08-22_18_05.csv</a><br>
 	├── <a href="./users_World_2021_02_09-22_21_27.csv">users_World_2021_02_09-22_21_27.csv</a><br>
@@ -399,12 +401,13 @@
 	├── <a href="./users_World_2021_06_06-22_32_46.csv">users_World_2021_06_06-22_32_46.csv</a><br>
 	├── <a href="./users_World_2021_06_07-22_49_27.csv">users_World_2021_06_07-22_49_27.csv</a><br>
 	├── <a href="./users_World_2021_06_08-22_22_46.csv">users_World_2021_06_08-22_22_46.csv</a><br>
-	└── <a href="./users_World_2021_06_09-22_22_48.csv">users_World_2021_06_09-22_22_48.csv</a><br>
+	├── <a href="./users_World_2021_06_09-22_22_48.csv">users_World_2021_06_09-22_22_48.csv</a><br>
+	└── <a href="./users_World_2021_06_10-22_19_53.csv">users_World_2021_06_10-22_19_53.csv</a><br>
 	<br><br>
 	</p>
 	<p>
 
-2 directories, 369 files
+2 directories, 372 files
 	<br><br>
 	</p>
 	<hr>
