Brandmaister digital contacts on 2021-06-24-221121

--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
 	├── <a href="./users_Belarus_2021_06_21-22_19_43.csv">users_Belarus_2021_06_21-22_19_43.csv</a><br>
 	├── <a href="./users_Belarus_2021_06_22-22_19_44.csv">users_Belarus_2021_06_22-22_19_44.csv</a><br>
 	├── <a href="./users_Belarus_2021_06_23-22_18_34.csv">users_Belarus_2021_06_23-22_18_34.csv</a><br>
+	├── <a href="./users_Belarus_2021_06_24-22_11_21.csv">users_Belarus_2021_06_24-22_11_21.csv</a><br>
 	├── <a href="./users_Ukraine_2021_02_08-11_13_31.csv">users_Ukraine_2021_02_08-11_13_31.csv</a><br>
 	├── <a href="./users_Ukraine_2021_02_08-22_18_07.csv">users_Ukraine_2021_02_08-22_18_07.csv</a><br>
 	├── <a href="./users_Ukraine_2021_02_09-22_21_30.csv">users_Ukraine_2021_02_09-22_21_30.csv</a><br>
@@ -305,6 +306,7 @@
 	├── <a href="./users_Ukraine_2021_06_21-22_19_42.csv">users_Ukraine_2021_06_21-22_19_42.csv</a><br>
 	├── <a href="./users_Ukraine_2021_06_22-22_19_44.csv">users_Ukraine_2021_06_22-22_19_44.csv</a><br>
 	├── <a href="./users_Ukraine_2021_06_23-22_18_33.csv">users_Ukraine_2021_06_23-22_18_33.csv</a><br>
+	├── <a href="./users_Ukraine_2021_06_24-22_11_20.csv">users_Ukraine_2021_06_24-22_11_20.csv</a><br>
 	├── <a href="./users_World_2021_02_08-11_13_29.csv">users_World_2021_02_08-11_13_29.csv</a><br>
 	├── <a href="./users_World_2021_02_08-22_18_05.csv">users_World_2021_02_08-22_18_05.csv</a><br>
 	├── <a href="./users_World_2021_02_09-22_21_27.csv">users_World_2021_02_09-22_21_27.csv</a><br>
@@ -441,12 +443,13 @@
 	├── <a href="./users_World_2021_06_20-22_19_13.csv">users_World_2021_06_20-22_19_13.csv</a><br>
 	├── <a href="./users_World_2021_06_21-22_19_40.csv">users_World_2021_06_21-22_19_40.csv</a><br>
 	├── <a href="./users_World_2021_06_22-22_19_40.csv">users_World_2021_06_22-22_19_40.csv</a><br>
-	└── <a href="./users_World_2021_06_23-22_18_30.csv">users_World_2021_06_23-22_18_30.csv</a><br>
+	├── <a href="./users_World_2021_06_23-22_18_30.csv">users_World_2021_06_23-22_18_30.csv</a><br>
+	└── <a href="./users_World_2021_06_24-22_11_17.csv">users_World_2021_06_24-22_11_17.csv</a><br>
 	<br><br>
 	</p>
 	<p>
 
-2 directories, 411 files
+2 directories, 414 files
 	<br><br>
 	</p>
 	<hr>
