Brandmaister digital contacts on 2021-07-02-222414

--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@
 	├── <a href="./users_Belarus_2021_06_29-22_20_37.csv">users_Belarus_2021_06_29-22_20_37.csv</a><br>
 	├── <a href="./users_Belarus_2021_06_30-22_20_13.csv">users_Belarus_2021_06_30-22_20_13.csv</a><br>
 	├── <a href="./users_Belarus_2021_07_01-22_20_12.csv">users_Belarus_2021_07_01-22_20_12.csv</a><br>
+	├── <a href="./users_Belarus_2021_07_02-22_24_13.csv">users_Belarus_2021_07_02-22_24_13.csv</a><br>
 	├── <a href="./users_Ukraine_2021_02_08-11_13_31.csv">users_Ukraine_2021_02_08-11_13_31.csv</a><br>
 	├── <a href="./users_Ukraine_2021_02_08-22_18_07.csv">users_Ukraine_2021_02_08-22_18_07.csv</a><br>
 	├── <a href="./users_Ukraine_2021_02_09-22_21_30.csv">users_Ukraine_2021_02_09-22_21_30.csv</a><br>
@@ -321,6 +322,7 @@
 	├── <a href="./users_Ukraine_2021_06_29-22_20_36.csv">users_Ukraine_2021_06_29-22_20_36.csv</a><br>
 	├── <a href="./users_Ukraine_2021_06_30-22_20_13.csv">users_Ukraine_2021_06_30-22_20_13.csv</a><br>
 	├── <a href="./users_Ukraine_2021_07_01-22_20_11.csv">users_Ukraine_2021_07_01-22_20_11.csv</a><br>
+	├── <a href="./users_Ukraine_2021_07_02-22_24_13.csv">users_Ukraine_2021_07_02-22_24_13.csv</a><br>
 	├── <a href="./users_World_2021_02_08-11_13_29.csv">users_World_2021_02_08-11_13_29.csv</a><br>
 	├── <a href="./users_World_2021_02_08-22_18_05.csv">users_World_2021_02_08-22_18_05.csv</a><br>
 	├── <a href="./users_World_2021_02_09-22_21_27.csv">users_World_2021_02_09-22_21_27.csv</a><br>
@@ -465,12 +467,13 @@
 	├── <a href="./users_World_2021_06_28-22_19_39.csv">users_World_2021_06_28-22_19_39.csv</a><br>
 	├── <a href="./users_World_2021_06_29-22_20_33.csv">users_World_2021_06_29-22_20_33.csv</a><br>
 	├── <a href="./users_World_2021_06_30-22_20_10.csv">users_World_2021_06_30-22_20_10.csv</a><br>
-	└── <a href="./users_World_2021_07_01-22_20_08.csv">users_World_2021_07_01-22_20_08.csv</a><br>
+	├── <a href="./users_World_2021_07_01-22_20_08.csv">users_World_2021_07_01-22_20_08.csv</a><br>
+	└── <a href="./users_World_2021_07_02-22_24_10.csv">users_World_2021_07_02-22_24_10.csv</a><br>
 	<br><br>
 	</p>
 	<p>
 
-2 directories, 435 files
+2 directories, 438 files
 	<br><br>
 	</p>
 	<hr>
